mongodb/mongo_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: amanchauhan810/witty-mongodb:v1
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data
      volumes: 
      - name: mongo-data
        persistentVolumeClaim:
          claimName: mongo-data-pvc
