mongodb/mongo-np.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: witty-backend
  policyTypes:
    - Ingress
    - Egress
  ingress: [] # Deny all ingress traffic
  egress: []  # Deny all egress traffic
